--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -34,5 +35,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.37",
+    "css-loader": "^6.5.1",
+    "css-modules-typescript-loader": "^4.0.1",
+    "fork-ts-checker-webpack-plugin": "^6.5.0",
+    "node-sass": "^5.0.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.6"
   }
 }
