--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "css-loader": "^6.5.1",
     "css-modules-typescript-loader": "^4.0.1",
     "fork-ts-checker-webpack-plugin": "^6.5.0",
