--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "css-loader": "^6.5.1",
     "css-modules-typescript-loader": "^4.0.1",
     "fork-ts-checker-webpack-plugin": "^6.5.0",
-    "node-sass": "^5.0.0",
+    "sass": "^1.44.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6"
   }
