--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://webstorybegin.github.io/React_Project/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,6 +14,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,6 +45,7 @@
     "css-loader": "^6.5.1",
     "css-modules-typescript-loader": "^4.0.1",
     "fork-ts-checker-webpack-plugin": "^6.5.0",
+    "gh-pages": "^4.0.0",
     "sass": "^1.44.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6"
